[package]
name = "tcpping"
version = "1.1.0"
authors = ["ghost <noreply>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
socket2 = "0.4"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
libc = "0.2"
